remove part of warnings of sonarqube report