@@ -6,6 +6,7 @@ import cn.leansd.cotrip.application.plan.TripPlanDTO;
 import java.util.List;
 
 public class TripPlanConverter {
+    private TripPlanConverter(){}
     public static TripPlanDTO toDTO(TripPlan entity) {
         TripPlanDTO dto = new TripPlanDTO();
         dto.setId(entity.getId());
@@ -20,6 +21,6 @@ public class TripPlanConverter {
     }
 
     public static List<TripPlanDTO> toDTOs(List<TripPlan> tripPlans) {
-        return tripPlans.stream().map(TripPlanConverter::toDTO).collect(java.util.stream.Collectors.toList());
+        return tripPlans.stream().map(TripPlanConverter::toDTO).toList();
     }
 }
